--- a/style/menu.css
+++ b/style/menu.css
@@ -1,9 +1,6 @@
 /* NEW ARTICLES */
 
-.list_articles {
-    /*background-image: url("../images/wallpaper/news_background.jpg");*/
-    /*background-attachment: fixed!important;*/
-    /*background-size: cover!important;*/
+.listArticles {
     width: 100%;
     height: 40vw;
     position: absolute;
@@ -14,7 +11,7 @@
     top: 4vw;
 }
 
-.list_articles > div {
+.listArticles > div {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -46,30 +43,30 @@
     overflow: hidden;
 }
 
-.new_articles_img {
+.newArticlesImg {
     width: 100%;
     transition: transform .5s ease;
 }
 
-.new_articles_img:hover {
+.newArticlesImg:hover {
     transform: scale(1.1);
 }
 
-.new_articles_content {
+.newArticlesContent {
     text-shadow: None;
 }
 
-.new_articles_content h2 {
+.newArticlesContent h2 {
     font-size: 115%;
 }
 
-.new_articles_content span {
+.newArticlesContent span {
     font-size: 90%;
 }
 
 /* NEW CHARACTERS */
 
-.list_new_characters {
+.listNewCharacters {
     position: relative;
     width: 100%;
     height: 50vw;
@@ -78,13 +75,13 @@
     background-size: cover !important;
 }
 
-.list_new_characters > img {
+.listNewCharacters > img {
     position: absolute;
     width: 100%;
     bottom: 99%;
 }
 
-.list_new_characters > div {
+.listNewCharacters > div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,7 +91,7 @@
     justify-content: flex-start;
 }
 
-.list_new_characters > div span {
+.listNewCharacters > div span {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -112,28 +109,28 @@
     src: url('zh-cn.ttf') format('truetype');
 }
 
-.list_new_characters > div img {
+.listNewCharacters > div img {
     width: 62vw;
 }
 
 
-.list_new_characters > div > div {
+.listNewCharacters > div > div {
     display: flex;
 }
 
-.list_new_characters > div > div > div {
+.listNewCharacters > div > div > div {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.list_new_characters > div > div > div p {
+.listNewCharacters > div > div > div p {
     font-style: italic;
     padding: 5vw;
     font-size: 100%;
 }
 
-.list_new_characters a {
+.listNewCharacters a {
     text-decoration: none;
     font-family: 'zh-cn';
     color: #efd5a3;
@@ -143,7 +140,7 @@
     transition: all 1s;
 }
 
-.list_new_characters a:hover {
+.listNewCharacters a:hover {
     filter: brightness(120%) drop-shadow(0 0 1rem black);
     text-shadow: 0 0 1px #ffeab3, 0 0 10px #fff, 0 0 10px #000, 0 0 10px #faf322, 0 0 1px #1a1713;
 }
